# aivid

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  media_metadata_extractor.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: report.md
src/aivid/: __init__.py  analyze.py  cli.py  config.py  formatters.py  metadata.py  models.py  utils.py
src/aivid/detectors/: __init__.py  audioseal.py  base.py  videoseal.py
src/aivid/downloaders/: __init__.py  base.py  sora.py  tiktok.py  youtube.py
src/aivid/extractors/: __init__.py  base.py  c2pa.py  c2patool.py  exiftool.py  ffprobe.py  heuristic.py  tiktok_api.py  youtube_api.py
src/aivid/formatters/: __init__.py  c2pa.py  default.py  full.py  json.py  quiet.py
src/aivid/models/: __init__.py  ai.py  descriptive.py  file.py  provenance.py  raw.py  source.py  technical.py  video.py  watermark.py
src/aivid/utils/: __init__.py  container.py  deps.py  url_parser.py
tests/: __init__.py  conftest.py  test_exiftool.py  test_metadata.py
