[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aivid"
version = "0.1.0"
description = "AI video toolkit - detect, analyze, and work with AI-generated videos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SocialNetwork0" }
]
keywords = [
    "ai",
    "video",
    "detection",
    "c2pa",
    "metadata",
    "sora",
    "gemini",
    "veo",
    "dalle",
    "midjourney",
    "runway",
    "pika",
    "kling",
    "luma",
    "firefly",
    "deepfake",
    "synthetic-media",
    "ai-generated",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
# C2PA support (recommended)
c2pa = [
    "c2pa-python>=0.6.0",
]
# ExifTool integration (requires exiftool binary)
exif = [
    "pyexiftool>=0.5.0",
]
# MediaInfo integration (requires libmediainfo)
mediainfo = [
    "pymediainfo>=6.0",
]
# Recommended install (c2pa support)
default = [
    "aivid[c2pa]",
]
# Full install (all features)
full = [
    "aivid[c2pa,exif,mediainfo]",
]
# Development dependencies
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
# Documentation
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
aivid = "aivid.cli:main"

[project.urls]
Homepage = "https://github.com/socialnetwork0/aivid"
Documentation = "https://github.com/socialnetwork0/aivid#readme"
Repository = "https://github.com/socialnetwork0/aivid"
Issues = "https://github.com/socialnetwork0/aivid/issues"
Changelog = "https://github.com/socialnetwork0/aivid/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aivid"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["aivid"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["c2pa", "c2pa.*", "exiftool", "exiftool.*", "pymediainfo", "pymediainfo.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "requires_ffprobe: requires ffprobe to be installed",
    "requires_mediainfo: requires mediainfo to be installed",
    "requires_exiftool: requires exiftool to be installed",
    "requires_c2patool: requires c2patool to be installed",
]

[tool.coverage.run]
source = ["src/aivid"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
